z-index FF bug fix

--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -108,12 +108,12 @@ img {
 
 /* CANVAS AREA AND OVERLAY */
 .canvas-area {
-    background-color:#eeeeee;
     grid-area: 2 / 1 / 3 / 2;
+    z-index:1;
 }
 
 .canvas-bg-area {
-    background-color:red;
+    z-index:1;
     grid-area: 2 / 1 / 3 / 2;
 }
 
@@ -129,7 +129,7 @@ img {
     width: 100%;
     height: 100%;
     position: relative;
-    z-index:1;
+    z-index:2;
 }
 
 .components-area {
